--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,21 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-        
+      - name: docker login
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}   
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD        
 
 
       # Runs a set of commands using the runners shell
       - name: docker build cnn
         run: |
           docker build . -t avik6028/flask_cnn_deployment:1.0.0
+      
+      - name: docker push
+        run: |
+          docker push avik6028/flask_cnn_deployment:1.0.0
           
       
